--- a/WS-LoginRegister/nbproject/genfiles.properties
+++ b/WS-LoginRegister/nbproject/genfiles.properties
@@ -6,3 +6,4 @@ build.xml.stylesheet.CRC32=1707db4f@1.78.1.1
 nbproject/build-impl.xml.data.CRC32=1af7f224
 nbproject/build-impl.xml.script.CRC32=70a544d2
 nbproject/build-impl.xml.stylesheet.CRC32=58472a1d@1.78.1.1
+nbproject/jaxws-build.xml.stylesheet.CRC32=fb430199
